# rusqdoltlite_migration

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/from-directory/: Cargo.toml
examples/from-directory/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
rusqlite_migration/: Cargo.toml
rusqlite_migration/src/: builder.rs  errors.rs  fk_check.rs  lib.rs
rusqlite_migration/src/errors/: tests.rs
rusqlite_migration/src/errors/snapshots/: rusqdoltlite_migration__errors__tests__error_display__file_load.snap  rusqdoltlite_migration__errors__tests__error_display__foreign_key_check.snap  rusqdoltlite_migration__errors__tests__error_display__hook.snap  rusqdoltlite_migration__errors__tests__error_display__invalid_user_version.snap  rusqdoltlite_migration__errors__tests__error_display__migration_definition.snap  rusqdoltlite_migration__errors__tests__error_display__rusqdoltlite_error.snap  rusqdoltlite_migration__errors__tests__error_display__specified_schema_version.snap  rusqdoltlite_migration__errors__tests__error_display__too_high_schema_version.snap  rusqdoltlite_migration__errors__tests__error_display__unrecognized.snap  (+7 more)
rusqlite_migration/src/tests/: builder.rs  core.rs  fk_check.rs  helpers.rs
rusqlite_migration_benches/: Cargo.toml
rusqlite_migration_benches/benches/: from_directory.rs  iai.rs
rusqlite_migration_tests/: Cargo.toml
rusqlite_migration_tests/tests/: from_directory_test.rs  integration_test.rs  migrations_builder_from_iterator_test.rs  migrations_builder_test.rs  multiline_test.rs  up_and_down.rs
(+18 files in other folders)
