[workspace.package]
authors = ["Chris Mitchell"]
categories = ["database"]
description = "A fork of rusqdoltlite_migration to use rusqdoltlite instead."
keywords = ["rusqdoltlite", "sqlite", "user_version", "database", "migration"]
license = "Apache-2.0"
repository = "https://github.com/chris7/rusqdoltlite_migration"
documentation = "https://docs.rs/rusqdoltlite_migration/"
rust-version = "1.95"
version = "2.6.3"

[workspace]
members = [
  "rusqlite_migration",
  "rusqlite_migration_tests",
  "rusqlite_migration_benches",
  "examples/*",
]
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.dependencies.rusqdoltlite]
package = "rusqdoltlite"
version = "0.40.4"
default-features = false
features = []
